log_hp_4.txt
node.exe : 
ts-jest[ts-compiler] 
(WARN) 
At line:1 char:1
+ & "C:\Program Files\
nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo 
...
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (ts-jest[ts   
 -compiler] (WARN)    
 :String) [], Rem    
oteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
                
TypeScript compiler 
option 
'isolatedModules' may 
prevent the 'emitDecor
atorMetadata' option 
from emitting all 
metadata.
                The 'e
mitDecoratorMetadata' 
option is not 
required by Angular 
and can be removed if 
not explicitly 
required by the 
project.'
            
FAIL src/app/dm-toolki
t/combat-manager/comba
t-manager.component.sp
ec.ts
  ΓùÅ Test suite 
failed to run

    Jest encountered 
an unexpected token

    Jest failed to 
parse a file. This 
happens e.g. when 
your code or its 
dependencies use 
non-standard 
JavaScript syntax, or 
when Jest is not 
configured to support 
such syntax.

    Out of the box 
Jest supports Babel, 
which will be used to 
transform your files 
into valid JS based 
on your Babel 
configuration.

    By default 
"node_modules" folder 
is ignored by 
transformers.

    Here's what you 
can do:
     ΓÇó If you are 
trying to use 
ECMAScript Modules, 
see https://jestjs.io/
docs/ecmascript-module
s for how to enable 
it.
     ΓÇó If you are 
trying to use 
TypeScript, see https:
//jestjs.io/docs/getti
ng-started#using-types
cript
     ΓÇó To have some 
of your 
"node_modules" files 
transformed, you can 
specify a custom "tran
sformIgnorePatterns" 
in your config.
     ΓÇó If you need 
a custom 
transformation, 
specify a "transform" 
option in your config.
     ΓÇó If you 
simply want to mock 
your non-JS modules 
(e.g. binary assets) 
you can stub them out 
with the 
"moduleNameMapper" 
config option.

    You'll find more 
details and examples 
of these config 
options in the docs:
    https://jestjs.io/
docs/configuration
    For information 
about custom 
transformations, see:
    https://jestjs.io/
docs/code-transformati
on

    Details:

    C:\tofu\codex\code
x-admin\src\app\dm-too
lkit\combat-manager\co
mbat-manager.component
.ts:415
            getNodeFro
mCodex(path, 
string[]);
                      
                    ^

    SyntaxError: 
Unexpected token ']'

    [0m [90m 2 
|[39m 
[36mimport[39m { [3
3mHttpClientTestingMod
ule[39m[33m,[39m [
33mHttpTestingControll
er[39m } 
[36mfrom[39m [32m'@
angular/common/http/te
sting'[39m[33m;[39m
     [90m 3 |[39m 
[36mimport[39m { 
signal[33m,[39m prov
ideZonelessChangeDetec
tion } [36mfrom[39m 
[32m'@angular/core'[
39m[33m;[39m
    [31m[1m>[22m[3
9m[90m 4 |[39m 
[36mimport[39m { [3
3mCombatManagerCompone
nt[39m } 
[36mfrom[39m [32m'.
/combat-manager.compon
ent'[39m[33m;[39m
     [90m   |[39m 
[31m[1m^[22m[39m
     [90m 5 |[39m 
[36mimport[39m {
     [90m 6 |[39m   
  createMockCodex[33m
,[39m
     [90m 7 |[39m   
  createMockFight[33m
,[39m[0m

      at Runtime.creat
eScriptFromCode (node_
modules/jest-runtime/b
uild/index.js:1318:40)
      at 
Object.<anonymous> (sr
c/app/dm-toolkit/comba
t-manager/combat-manag
er.component.spec.ts:4
:1)

Test Suites: 1 
failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.555 s
Ran all test suites 
matching combat-manage
r.component.spec.ts 
with tests matching 
"should update 
combatant HP".
